# barista-deployment

./: .gitignore  Dockerfile  Dockerfile.frontend  docker-compose.yml  railway.toml
backend/: .env.example  README.md  api.py  check_state.py  config.py  database.py  main.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  test_discriminator.py  test_google_api.py  verify_components.py
backend/.github/workflows/: ci.yml
backend/agents/: QueryDecomposer.py  analyzer_agents.py  bing_search_agent.py  discriminators.py  fuzzy_discriminator.py  google_search_agent.py  guardrails.py  multi_search_agent.py  search_agent.py  serper_search_agent.py  summariser.py
backend/graph/: analyzer_workflow.py  workflow.py
backend/models/: schemas.py
backend/nodes/: rank_filter.py
backend/routers/: analyze.py  companies.py
backend/services/: company_tracking.py
backend/tests/: test_api_contract_e2e.py  test_comparative_pdf_report.py  test_domain_fixes.py  test_entity_anchored_search.py  test_guardrails.py  test_integration_live_paths.py  test_tracking_state.py
backend/utils/: comparative_pdf_report.py  date_utils.py  dedup.py  entity.py  geturl.py  json_utils.py  logger.py  pdf_report.py  predefinedurls.py  query_builder.py  ranking.py
frontend/: README.md  nginx.conf  pnpm-workspace.yaml  replit.md
frontend/artifacts/mockup-sandbox/: vite.config.ts
frontend/artifacts/research-platform/: analyze_report_analyzer_9e9e8dd70a612c7b.json  index.html  (+3 more)
frontend/attached_assets/: Pasted-Build-a-production-quality-web-application-for-an-AI-po_1773595454084.txt
(+26 files in other folders)
